--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,9 @@
-
-Documentation/.DS_Store
+# OS generated files #
+######################
 .DS_Store
-PNGs/.DS_Store
-Documentation/.DS_Store
-.DS_Store
-Documentation/.DS_Store
-PNGs/.DS_Store
-Documentation/.DS_Store
-PNGs/.DS_Store
-.DS_Store
-Documentation/.DS_Store
-.DS_Store
-PNGs/.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
