--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ PNGs/.DS_Store
 Documentation/.DS_Store
 .DS_Store
 PNGs/.DS_Store
+.DS_Store
+Construction/.DS_Store
+Documentation/.DS_Store
+PNGs/.DS_Store
